force-app/main/default/objects/RE_SG_CostPrice__c/RE_SG_CostPrice__c.object-meta.xml
<CustomObject>
    <label>Cost Price - Singapore</label>
    <nameField>
        <displayFormat>RE-SG-C{000000}</displayFormat>
        <label>CostPriceName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Price - Singapore</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>