force-app/main/default/objects/RE_SG_CostPrice__c/fields/RE_Cost_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>RE_Cost_Price_Adjustment__c</fullName>
    <label>Cost Price Adjustment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>