force-app/main/default/objects/RE_SG_CostPrice__c/fields/RE_Costprice_Marginal_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Costprice_Marginal_Cost__c</fullName>
    <label>MC (USD CTS/LTR)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>