force-app/main/default/objects/RE_SG_CostPrice__c/fields/RE_Costprice_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Costprice_Unit__c</fullName>
    <label>Costprice Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>