force-app/main/default/objects/RE_SG_CostPrice__c/fields/RE_Hydrocarbon_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Hydrocarbon_Value__c</fullName>
    <label>Hydrocarbon Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>