force-app/main/default/objects/RE_SG_CostPrice__c/listViews/Yesterday.listView-meta.xml
<ListView>
    <fullName>Yesterday</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Additive_Cost__c</columns>
    <columns>RE_FX_Marginal_Cost__c</columns>
    <columns>RE_FX_Laid_Down_Cost__c</columns>
    <columns>RE_Hydrocarbon_Value__c</columns>
    <columns>RE_Marketing_Selling_Tariff__c</columns>
    <columns>RE_Oil_Loss__c</columns>
    <columns>RE_Primary_Transport_Cost__c</columns>
    <columns>RE_Storage_Handling_Cost__c</columns>
    <columns>RE_Market_Premium__c</columns>
    <columns>RE_Mark_Up_Credit_Charge__c</columns>
    <columns>RE_Distillation_Discount__c</columns>
    <columns>RE_Fixed_Premium__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>RE_IsMidday__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Yesterday</label>
</ListView>